--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.21",
     "@mantine/hooks": "^6.0.21",
+    "@mantine/notifications": "^6.0.21",
     "axios": "^1.5.1",
+    "jwt-decode": "^3.1.2",
     "mantine-react-table": "^1.3.3",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.7",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0"
   },
