--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^6.0.21",
     "@mantine/hooks": "^6.0.21",
     "@mantine/notifications": "^6.0.21",
+    "@tabler/icons-react": "^2.39.0",
     "axios": "^1.5.1",
     "jwt-decode": "^3.1.2",
     "mantine-react-table": "^1.3.3",
